summative.moria.Moria.scala.error
Compilation error:
Moria:30: error: not found: value Direction
  setDirection(Direction.EAST)
               ^